--- a/tasks/create_blobstore_each.yml
+++ b/tasks/create_blobstore_each.yml
@@ -6,6 +6,7 @@
     group: "{{ nexus_os_group }}"
     state: directory
     recurse: true
+  when: nexus_install_enable
 
 - include: call_script.yml
   vars:
