--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -142,7 +142,7 @@ nexus_privileges:
       - browse
 
 nexus_roles:
-  - id: Developpers  # can map to a LDAP group id, also used as a key to update a role
+  - id: Developers  # can map to a LDAP group id, also used as a key to update a role
     name: developers
     description: All developers
     privileges:
