--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -67,8 +67,10 @@ nexus_email_ssl_on_connect_enabled: false
 nexus_email_ssl_check_server_identity_enabled: false
 nexus_email_trust_store_enabled: false
 
+# capabilities
 nexus_branding_header: ""
 nexus_branding_footer: "Last provisionned {{ ansible_date_time.iso8601 }}"
+nexus_capability_audit_enable: true
 
 httpd_setup_enable: false
 httpd_server_name: nexus.vm
