--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -69,7 +69,7 @@ nexus_email_trust_store_enabled: false
 
 # capabilities
 nexus_branding_header: ""
-nexus_branding_footer: "Last provisionned {{ ansible_date_time.iso8601 }}"
+nexus_branding_footer: "Last provisioned {{ ansible_date_time.iso8601 }}"
 nexus_capability_audit_enable: true
 
 httpd_setup_enable: false
