--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -68,8 +68,9 @@ nexus_email_ssl_check_server_identity_enabled: false
 nexus_email_trust_store_enabled: false
 
 # capabilities
-nexus_branding_header: ""
-nexus_branding_footer: "Last provisioned {{ ansible_date_time.iso8601 }}"
+nexus_capability_branding_enable: true
+nexus_capability_branding_header: ""
+nexus_capability_branding_footer: "Last provisioned {{ ansible_date_time.iso8601 }}"
 nexus_capability_audit_enable: true
 
 httpd_setup_enable: false
@@ -123,6 +124,7 @@ nexus_proxy_exclude_hosts:
   - "127.*"
   - "[::1]"
 
+# enable repository configurations
 nexus_config_maven: true
 nexus_config_pypi: false
 nexus_config_docker: false
@@ -162,11 +164,10 @@ nexus_local_users: []
 #    roles:
 #      - developers
 
-nexus_delete_default_repos: false
 
+### Blobstores
 nexus_delete_default_blobstore: false
 
-#
 # Nexus blobstore config
 nexus_blob_split: false     # True - blobstores per format
 nexus_blob_names:           # Splited blob name list @ blob_vars.yml
@@ -191,11 +192,30 @@ nexus_blob_names:           # Splited blob name list @ blob_vars.yml
   yum:
     blob: 'default'
 
-
 nexus_blobstores: []
 # example blobstore item :
 # - name: separate-storage
 #   path: /mnt/custom/path
+
+
+### Privileges
+_nexus_privilege_defaults:
+  type: repository-view
+  format: maven2
+  actions:
+    - read
+
+
+### Repository formats
+nexus_delete_default_repos: false
+
+# maven support
+_nexus_repos_maven_defaults:
+  blob_store: "{{ nexus_blob_names.mvn.blob }}"
+  strict_content_validation: true
+  version_policy: release  # release, snapshot or mixed
+  layout_policy: strict  # strict or permissive
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
 
 # also see _nexus_repos_maven_defaults below
 nexus_repos_maven_proxy:
@@ -222,7 +242,197 @@ nexus_repos_maven_group:
       - central
       - jboss
 
-# Scheduled tasks
+# pypi support
+_nexus_repos_pypi_defaults:
+  blob_store: "{{ nexus_blob_names.pypi.blob }}"
+  strict_content_validation: true
+  version_policy: release  # release, snapshot or mixed
+  layout_policy: strict  # strict or permissive
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_pypi_proxy:
+  - name: pypi
+    remote_url: 'https://pypi.python.org/'
+
+nexus_repos_pypi_hosted:
+  - name: pypi-internal
+    version_policy: release
+    write_policy: allow  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_pypi_group:
+  - name: pypi-all
+    member_repos:
+      - pypi-internal
+      - pypi
+
+# raw repo support
+_nexus_repos_raw_defaults:
+  blob_store: "{{ nexus_blob_names.raw.blob }}"
+  strict_content_validation: true
+  version_policy: release  # release, snapshot or mixed
+  layout_policy: strict  # strict or permissive
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_raw_proxy:
+  - name: ubuntu-archive
+    remote_url: 'http://archive.ubuntu.com/ubuntu/'
+
+nexus_repos_raw_hosted:
+  - name: raw-internal
+    version_policy: release
+    write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_raw_group:
+  - name: raw-all
+    member_repos:
+      - raw-internal
+      - ubuntu-archive
+
+# Docker support
+_nexus_repos_docker_defaults:
+  blob_store: "{{ nexus_blob_names.docker.blob }}"
+  force_basic_auth: true
+  strict_content_validation: true
+  version_policy: release  # release, snapshot or mixed
+  layout_policy: strict  # strict or permissive
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_docker_proxy:
+  - name: docker-proxy
+    http_port: "{{ nexus_docker_proxy_port }}"
+    v1_enabled: True
+    index_type: "HUB"
+    proxy_url: "https://registry-1.docker.io"
+    use_nexus_certificates_to_access_index: false
+
+nexus_repos_docker_hosted:
+  - name: docker-hosted
+    http_port: "{{ nexus_docker_hosted_port }}"
+    v1_enabled: True
+
+nexus_repos_docker_group:
+  - name: docker-group
+    http_port: "{{ nexus_docker_group_port }}"
+    v1_enabled: True
+    member_repos:
+      - docker-hosted
+      - docker-proxy
+
+# RubyGems support
+_nexus_repos_rubygems_defaults:
+  blob_store: "{{ nexus_blob_names.ruby.blob }}"
+  strict_content_validation: true
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_rubygems_proxy:
+  - name: rubygems-proxy
+    blob_store: "{{ nexus_blob_names.ruby.blob }}"
+    remote_url: https://rubygems.org
+
+nexus_repos_rubygems_hosted:
+  - name: rubygems-hosted
+    blob_store: "{{ nexus_blob_names.ruby.blob }}"
+
+nexus_repos_rubygems_group:
+  - name: rubygems
+    blob_store: "{{ nexus_blob_names.ruby.blob }}"
+    member_repos:
+      - rubygems-hosted
+      - rubygems-proxy
+
+# Bower support
+_nexus_repos_bower_defaults:
+  blob_store: "{{ nexus_blob_names.bower.blob }}"
+  strict_content_validation: true
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_bower_proxy:
+  - name: bower-proxy
+    blob_store: "{{ nexus_blob_names.bower.blob }}"
+    remote_url: http://bower.herokuapp.com
+
+nexus_repos_bower_hosted:
+  - name: bower-internal
+    blob_store: "{{ nexus_blob_names.bower.blob }}"
+
+nexus_repos_bower_group:
+  - name: bower-all
+    blob_store: "{{ nexus_blob_names.bower.blob }}"
+    member_repos:
+      - bower-internal
+      - bower-proxy
+
+# npm support
+_nexus_repos_npm_defaults:
+  blob_store: "{{ nexus_blob_names.npm.blob }}"
+  strict_content_validation: true
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_npm_proxy:
+  - name: npm-proxy
+    blob_store: "{{ nexus_blob_names.npm.blob }}"
+    remote_url: https://registry.npmjs.org
+
+nexus_repos_npm_hosted:
+  - name: npm-internal
+    blob_store: "{{ nexus_blob_names.npm.blob }}"
+
+nexus_repos_npm_group:
+  - name: npm-all
+    blob_store: "{{ nexus_blob_names.npm.blob }}"
+    member_repos:
+      - npm-internal
+      - npm-proxy
+
+# nuget support
+_nexus_repos_nuget_defaults:
+  blob_store: "{{ nexus_blob_names.nuget.blob }}"
+  strict_content_validation: true
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_nuget_proxy:
+  - name: nuget-proxy
+    blob_store: "{{ nexus_blob_names.nuget.blob }}"
+    remote_url: http://www.nuget.org/api/v2
+
+nexus_repos_nuget_hosted:
+  - name: nuget-internal
+    blob_store: "{{ nexus_blob_names.nuget.blob }}"
+
+nexus_repos_nuget_group:
+  - name: nuget-all
+    blob_store: "{{ nexus_blob_names.nuget.blob }}"
+    member_repos:
+      - nuget-internal
+      - nuget-proxy
+
+# gitlfs support
+_nexus_repos_gitlfs_defaults:
+  blob_store: "{{ nexus_blob_names.gitlfs.blob }}"
+  strict_content_validation: true
+  write_policy: allow  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_gitlfs_hosted:
+  - name: gitlfs-internal
+    blob_store: "{{ nexus_blob_names.gitlfs.blob }}"
+
+# yum support
+_nexus_repos_yum_defaults:
+  blob_store: "{{ nexus_blob_names.yum.blob }}"
+  repodata_depth: 0  # from 0 to 5
+  strict_content_validation: true
+  layout_policy: strict  # strict or permissive
+  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
+
+nexus_repos_yum_proxy: []
+# Example for epel centos-7 x86_64
+# - name: epel_centos_7_x86_64
+#   remote_url: http://download.fedoraproject.org/pub/epel/7/x86_64
+
+nexus_repos_yum_hosted: []
+
+
+### Scheduled tasks
 # Note: these are tasks you define by yourself (default: none)
 # If you used `nexus_backup_configure: true` above you will see a scheduled task for this
 # in your GUI which is not part of the below list
@@ -260,204 +470,3 @@ nexus_scheduled_tasks: []
 #    task_alert_email: alerts@example.org  # optional
 #    taskProperties:
 #      age: "24"
-
-_nexus_privilege_defaults:
-  type: repository-view
-  format: maven2
-  actions:
-    - read
-
-_nexus_repos_maven_defaults:
-  blob_store: "{{ nexus_blob_names.mvn.blob }}"
-  strict_content_validation: true
-  version_policy: release  # release, snapshot or mixed
-  layout_policy: strict  # strict or permissive
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-# pypi support ...
-_nexus_repos_pypi_defaults:
-  blob_store: "{{ nexus_blob_names.pypi.blob }}"
-  strict_content_validation: true
-  version_policy: release  # release, snapshot or mixed
-  layout_policy: strict  # strict or permissive
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_pypi_hosted:
-  - name: pypi-internal
-    version_policy: release
-    write_policy: allow  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_pypi_group:
-  - name: pypi-all
-    member_repos:
-      - pypi-internal
-      - pypi
-
-nexus_repos_pypi_proxy:
-  - name: pypi
-    remote_url: 'https://pypi.python.org/'
-
-# raw repo support
-
-_nexus_repos_raw_defaults:
-  blob_store: "{{ nexus_blob_names.raw.blob }}"
-  strict_content_validation: true
-  version_policy: release  # release, snapshot or mixed
-  layout_policy: strict  # strict or permissive
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_raw_proxy:
-  - name: ubuntu-archive
-    remote_url: 'http://archive.ubuntu.com/ubuntu/'
-
-nexus_repos_raw_hosted:
-  - name: raw-internal
-    version_policy: release
-    write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_raw_group:
-  - name: raw-all
-    member_repos:
-      - raw-internal
-      - ubuntu-archive
-
-# Docker support
-_nexus_repos_docker_defaults:
-  blob_store: "{{ nexus_blob_names.docker.blob }}"
-  force_basic_auth: true
-  strict_content_validation: true
-  version_policy: release  # release, snapshot or mixed
-  layout_policy: strict  # strict or permissive
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_docker_hosted:
-  - name: docker-hosted
-    http_port: "{{ nexus_docker_hosted_port }}"
-    v1_enabled: True
-
-nexus_repos_docker_proxy:
-  - name: docker-proxy
-    http_port: "{{ nexus_docker_proxy_port }}"
-    v1_enabled: True
-    index_type: "HUB"
-    proxy_url: "https://registry-1.docker.io"
-    use_nexus_certificates_to_access_index: false
-
-nexus_repos_docker_group:
-  - name: docker-group
-    http_port: "{{ nexus_docker_group_port }}"
-    v1_enabled: True
-    member_repos:
-      - docker-hosted
-      - docker-proxy
-
-# RubyGems support
-_nexus_repos_rubygems_defaults:
-  blob_store: "{{ nexus_blob_names.ruby.blob }}"
-  strict_content_validation: true
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_rubygems_hosted:
-  - name: rubygems-hosted
-    blob_store: "{{ nexus_blob_names.ruby.blob }}"
-
-nexus_repos_rubygems_group:
-  - name: rubygems
-    blob_store: "{{ nexus_blob_names.ruby.blob }}"
-    member_repos:
-      - rubygems-hosted
-      - rubygems-proxy
-
-nexus_repos_rubygems_proxy:
-  - name: rubygems-proxy
-    blob_store: "{{ nexus_blob_names.ruby.blob }}"
-    remote_url: https://rubygems.org
-
-# Bower support
-_nexus_repos_bower_defaults:
-  blob_store: "{{ nexus_blob_names.bower.blob }}"
-  strict_content_validation: true
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_bower_hosted:
-  - name: bower-internal
-    blob_store: "{{ nexus_blob_names.bower.blob }}"
-
-nexus_repos_bower_group:
-  - name: bower-all
-    blob_store: "{{ nexus_blob_names.bower.blob }}"
-    member_repos:
-      - bower-internal
-      - bower-proxy
-
-nexus_repos_bower_proxy:
-  - name: bower-proxy
-    blob_store: "{{ nexus_blob_names.bower.blob }}"
-    remote_url: http://bower.herokuapp.com
-
-# npm support
-_nexus_repos_npm_defaults:
-  blob_store: "{{ nexus_blob_names.npm.blob }}"
-  strict_content_validation: true
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_npm_hosted:
-  - name: npm-internal
-    blob_store: "{{ nexus_blob_names.npm.blob }}"
-
-nexus_repos_npm_group:
-  - name: npm-all
-    blob_store: "{{ nexus_blob_names.npm.blob }}"
-    member_repos:
-      - npm-internal
-      - npm-proxy
-
-nexus_repos_npm_proxy:
-  - name: npm-proxy
-    blob_store: "{{ nexus_blob_names.npm.blob }}"
-    remote_url: https://registry.npmjs.org
-
-_nexus_repos_nuget_defaults:
-  blob_store: "{{ nexus_blob_names.nuget.blob }}"
-  strict_content_validation: true
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_nuget_hosted:
-  - name: nuget-internal
-    blob_store: "{{ nexus_blob_names.nuget.blob }}"
-
-nexus_repos_nuget_group:
-  - name: nuget-all
-    blob_store: "{{ nexus_blob_names.nuget.blob }}"
-    member_repos:
-      - nuget-internal
-      - nuget-proxy
-
-nexus_repos_nuget_proxy:
-  - name: nuget-proxy
-    blob_store: "{{ nexus_blob_names.nuget.blob }}"
-    remote_url: http://www.nuget.org/api/v2
-
-# gitlfs support
-_nexus_repos_gitlfs_defaults:
-  blob_store: "{{ nexus_blob_names.gitlfs.blob }}"
-  strict_content_validation: true
-  write_policy: allow  # one of "allow", "allow_once" or "deny"
-
-nexus_repos_gitlfs_hosted:
-  - name: gitlfs-internal
-    blob_store: "{{ nexus_blob_names.gitlfs.blob }}"
-
-# yum support ...
-nexus_repos_yum_hosted: []
-nexus_repos_yum_proxy: []
-# Example for epel centos-7 x86_64
-# - name: epel_centos_7_x86_64
-#   remote_url: http://download.fedoraproject.org/pub/epel/7/x86_64
-
-_nexus_repos_yum_defaults:
-  blob_store: "{{ nexus_blob_names.yum.blob }}"
-  repodata_depth: 0  # from 0 to 5
-  strict_content_validation: true
-  layout_policy: strict  # strict or permissive
-  write_policy: allow_once  # one of "allow", "allow_once" or "deny"
