--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,6 +41,7 @@ nexus_docker_proxy_port: 9081
 nexus_docker_group_port: 9082
 nexus_default_context_path: '/'
 
+nexus_admin_user: 'admin' # Specify your admin user here. This is only necessary for
 nexus_admin_password: 'changeme'  # Note : admin password change subsequent to first-time install is *not implemented* yet
 nexus_anonymous_access: false
 
