--- a/tasks/declare_script_each.yml
+++ b/tasks/declare_script_each.yml
@@ -2,7 +2,7 @@
 - name: Removing (potential) previously declared Groovy script {{ item }}
   uri:
     url: "{{ nexus_default_host }}:{{ nexus_default_port }}{{ nexus_default_context_path }}{{ nexus_rest_api_endpoint }}/{{ item }}"
-    user: 'admin'
+    user: "{{ current_nexus_admin_user }}"
     password: "{{ current_nexus_admin_password }}"
     method: DELETE
     force_basic_auth: yes
@@ -11,7 +11,7 @@
 - name: Declaring Groovy script {{ item }}
   uri:
     url: "{{ nexus_default_host }}:{{ nexus_default_port }}{{ nexus_default_context_path }}{{ nexus_rest_api_endpoint }}"
-    user: 'admin'
+    user: "{{ current_nexus_admin_user }}"
     password: "{{ current_nexus_admin_password }}"
     body_format: json
     method: POST
