--- a/tasks/admin_password_setup.yml
+++ b/tasks/admin_password_setup.yml
@@ -3,6 +3,7 @@
   vars:
     script_name: update_admin_password
     args:
+      user: "{{ current_nexus_admin_user }}"
       new_password: "{{ nexus_admin_password }}"
 
 - name: Admin password changed
