--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -270,7 +270,7 @@
     line: "nexus.onboarding.enabled={{ nexus_onboarding_wizard }}"
     create: true
     mode: 0644
-  when: nexus_version is version_compare('3.17.0', '>=')
+  when: nexus_version is version_compare('3.1.0', '>=') and nexus_install_enable
 
 - name: Create Nexus tmp directory
   file:
