--- a/tasks/nexus_install.yml
+++ b/tasks/nexus_install.yml
@@ -386,16 +386,15 @@
   when: (nexus_backup_configure | bool) and nexus_install_enable
 
 - name: 'Check if data directory is empty (first-time install)'
-  command: "ls --ignore=lost+found {{ nexus_data_dir }}"
+  find: paths={{ nexus_data_dir }} excludes='lost+found'
   register: nexus_data_dir_contents
-  check_mode: no
   changed_when: false
 
 - name: Clean cache for upgrade process
   file:
     path: "{{ nexus_data_dir }}/clean_cache"
     state: touch
-  when: (nexus_latest_version.changed and nexus_data_dir_contents.stdout | length > 0) and nexus_install_enable
+  when: (nexus_latest_version.changed and nexus_data_dir_contents.matched | int > 0) and nexus_install_enable
   tags:
     # hard to run as a handler for time being
     - skip_ansible_lint
